--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/cookie-session": "^2.0.37",
+    "@types/express": "^4.17.0",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.1",
     "cookie-session": "^1.3.3",
@@ -14,5 +17,8 @@
     "start:build": "tsc -w",
     "start:run": "nodemon build/index.js",
     "start": "concurrently yarn:start:*"
+  },
+  "devDependencies": {
+    "prettier": "^1.18.2"
   }
 }
