--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "concurrently": "^4.1.1",
     "cookie-session": "^1.3.3",
     "express": "^4.17.1",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "reflect-metadata": "^0.1.13"
   },
   "scripts": {
     "start:build": "tsc -w",
